log
Thu, Mar 27, 2025  5:16:11 PM: 
 tests:  0|6
total_score: 0/70
25021aa
Thu, Mar 27, 2025  5:28:38 PM: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
e14bb5f
Thu, Mar 27, 2025  5:34:03 PM: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
ee9a4bc
Thu, Mar 27, 2025  5:39:45 PM: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
11484b3
Thu, Mar 27, 2025  5:42:07 PM: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  2|5
total_score: 15/70
a2658e0
Thu, Mar 27, 2025  5:42:47 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
d04a166
Thu, Mar 27, 2025  5:44:07 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
6fe978b
Thu, Mar 27, 2025  5:51:10 PM: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  5|4
total_score: 25/70
0b1dfa7
Thu, Mar 27, 2025  5:57:25 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
a776c27
Thu, Mar 27, 2025  6:03:59 PM: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  6|4
total_score: 25/70
9100990
Thu, Mar 27, 2025  6:06:18 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
14bfdab
Thu, Mar 27, 2025  6:14:12 PM: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  9|3
total_score: 35/70
2d3b713
Thu, Mar 27, 2025  6:20:12 PM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:0:
list.c: In function 'pushFront':
list.c:66:6: error: expected expression before 'Node'
     *Node nodo = createNode();
      ^~~~
Compilation failed
8c261ae
vi., 28 de mar. de 2025 15:52:18: 
In file included from test.c:5:0:
list.c: In function 'pushFront':
list.c:66:6: error: expected expression before 'Node'
     *Node nodo = createNode();
      ^~~~
Compilation failed
89d0d0d
vi., 28 de mar. de 2025 15:52:41: 
In file included from test.c:5:0:
list.c: In function 'pushFront':
list.c:66:6: error: expected expression before 'Node'
     *Node nodo = createNode();
      ^~~~
Compilation failed
5a12a42
vi., 28 de mar. de 2025 15:52:47: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  9|3
total_score: 35/70
00abe1a
vi., 28 de mar. de 2025 16:05:07: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  0|0
94ba447
vi., 28 de mar. de 2025 16:08:21: 
 list.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  9|3
total_score: 35/70
e9d7405
vi., 28 de mar. de 2025 16:11:06: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  9|3
total_score: 35/70
856f0fc
vi., 28 de mar. de 2025 16:11:47: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:0:
list.c: In function 'pushFront':
list.c:69:23: error: 'return' with a value, in function returning void [-Werror]
     return  list->head->data;
             ~~~~~~~~~~^~~~~~
list.c:65:6: note: declared here
 void pushFront(List * list, void * data) {
      ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
88aaf52
vi., 28 de mar. de 2025 16:16:45: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'pushFront':
list.c:66:19: error: comparison between pointer and integer [-Werror]
     if(list->head ==! NULL)return NULL;
                   ^~
list.c:66:35: error: 'return' with a value, in function returning void [-Werror]
     if(list->head ==! NULL)return NULL;
                                   ^~~~
list.c:65:6: note: declared here
 void pushFront(List * list, void * data) {
      ^~~~~~~~~
list.c:67:22: error: comparison between pointer and integer [-Werror]
     if(list->current ==! NULL) return NULL;
                      ^~
list.c:67:39: error: 'return' with a value, in function returning void [-Werror]
     if(list->current ==! NULL) return NULL;
                                       ^~~~
list.c:65:6: note: declared here
 void pushFront(List * list, void * data) {
      ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
77fbefc
vi., 28 de mar. de 2025 16:17:16: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
list.c: In function 'pushFront':
list.c:66:34: error: 'return' with a value, in function returning void [-Werror]
     if(list->head == NULL)return NULL;
                                  ^~~~
list.c:65:6: note: declared here
 void pushFront(List * list, void * data) {
      ^~~~~~~~~
list.c:67:38: error: 'return' with a value, in function returning void [-Werror]
     if(list->current == NULL) return NULL;
                                      ^~~~
list.c:65:6: note: declared here
 void pushFront(List * list, void * data) {
      ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
af2c9a4
